--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
+}
+
+.todo-side-bar {
+  @apply w-[300px] absolute right-0 h-full py-6 px-4  bg-white
+}
