--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@
 }
 
 .todo-side-bar {
-  @apply w-[300px] absolute right-0 h-full py-6 px-4  bg-white
+  @apply w-[300px] absolute right-0 h-full py-6 px-4  bg-white;
 }
 /*number input에 화살표 버튼 제거*/
 @layer utilities {
